Optimizing printing ticket to file
Removed gets called on the pass and directly added the information from the pass to the string without appending in the space calculations or the string writing itself.